refactor: improve code quality in BasicCSPSolver
- Rename variable 'var' to more descriptive names (problemVar, involvedVar)
- Simplify stream collection using toList() instead of Collectors.toList()
- Combine condition checks for better readability

Co-Authored-By: Angry-Jay <jinozebian@gmail.com>
Co-Authored-By: Ariazoox <anas.alaoui2002@gmail.com>